--- a/reactjs/src/css/checkout.scss
+++ b/reactjs/src/css/checkout.scss
@@ -1,30 +1,24 @@
-.container{ 
-
-    .card{ 
-        float:right; 
+.container {
+    .card {
+        float: right;
         padding-inline: 20px;
     }
 
-    .checkout-form{
+    .checkout-form {
         border: 1px solid black;
         border-radius: 10px;
-        width:60%;
+        width: 60%;
         padding: 4% 8%;
 
-        .form-control{
-            width:100%;
+        .form-control,
+        .select-form-control {
+            width: 100%;
             margin-bottom: 24px;
-        }
-        .select-form-control{
-            width:100%;
-            margin-bottom: 24px;
-
         }
     }
-    
-    a{
+
+    a {
         color: white;
         text-decoration: none;
     }
-    
 }
