--- a/reactjs/src/css/login.scss
+++ b/reactjs/src/css/login.scss
@@ -1,36 +1,34 @@
-
-.container{
-    .login-window{
+.container {
+    .login-window {
         border-radius: 8px;
-        background:  #121212;;
-        color:white;
+        background: #121212;
+        color: white;
         margin-block: 0;
         position: fixed;
         top: 50%;
         transform: translateY(-50%);
         width: 25%;
 
-        
-        .login-header{
+        .login-header {
             border-radius: 8px 8px 0 0;
             text-align: center;
             background-color: rgb(0, 83, 0);
             padding-block: 10px;
         }
-        form{
+
+        form {
             padding: 30px 60px;
         }
 
-        .login-btn{
+        .login-btn {
             text-align: center;
             padding-top: 20px;
-            
-            button{
+
+            button {
                 font-size: 14px;
                 color: white;
                 background-color: rgb(0, 83, 0);
             }
         }
     }
-
 }
