Responsive productDetails page
Changed the way that images in the gallery are
changed, simplified it and now use only states

Made the css reposnsive and added bootstrap
grid classes to ease

--- a/reactjs/src/css/reviews.scss
+++ b/reactjs/src/css/reviews.scss
@@ -4,6 +4,15 @@
     .write-review {
         width: 60%;
 
+
+        @media (max-width: 768px) {
+            width: 90%;
+
+            .react-simple-star-rating-tooltip{
+                margin-left: 0px  !important;
+            }
+        }
+
         .upload-files {
             padding-block: 20px;
 
