--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -1,14 +1,40 @@
 .product-container {
-    padding: 2% 8%;
+    padding: 2% 4%;
     height: fit-content;
 
+    @media (max-width: 992px) {
+        padding: 2% 10%;
+    }
+
+    @media (max-width: 768px) {
+        padding: 2%;
+
+        .content{
+            .name{
+                .btn-success{
+                    display: none;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 480px) {
+        padding: 2%;
+    }
+
+
+
+
     .characteristics-scroll-div {
-        overflow-y: scroll;
+        overflow-y: auto;
         padding-top: 10px;
-        height: 20%;
+        max-height: 20%;
+        margin-block:10px;
+        max-width: 80%;
 
         .characteristics-table {
             list-style-type: none;
+            max-width: 75%;
             width: fit-content;
             font-weight: 500;
 
@@ -16,6 +42,7 @@
                 padding: 4px 12px;
             }
         }
+
     }
 
     .description-short {
@@ -27,35 +54,74 @@
         line-clamp: 10;
         -webkit-line-clamp: 10;
         display: -webkit-box;
+
+        @media (max-width: 480px) {
+            -webkit-line-clamp: 5;
+            line-clamp: 5;
+        }
     }
 
     .description-full {
-        white-space: 0;
+        white-space: normal;
         padding: 4% 4%;
+
+        @media (max-width: 768px) {
+            padding: 10% 4%;
+        }
     }
 
     .gallery {
-        position: sticky;
-        height: 100%;
+        position: relative;
         display: flex;
-        flex-direction: row;
-        float: left;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
 
-        div img {
-            object-fit: contain;
-            max-width: 100%;
+        @media (max-width: 768px) {
+            flex-direction: column;
         }
 
+        .main-image-container{
+            width: 100%;
+            height: 500px; /* Set a fixed height */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden; /* Prevents content shifting */
+
+            .main-image {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain; /* Ensures image scales properly without stretching */
+            }
+        }
+        
+        
         .gallery-images {
             list-style: none;
-            float: left;
-            padding-inline: 10px;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            @media (max-width: 768px) {
+                flex-direction: row;
+                flex-wrap: nowrap;
+                overflow-x: auto;
+                justify-content: flex-start;
+            }
 
             li {
                 padding: 2px;
                 border-radius: 8px;
                 border: 2px solid rgb(187, 187, 187);
-                margin-block: 10px;
+                margin: 5px;
+                cursor: pointer;
+
+                @media (max-width: 768px) {
+                    flex: 0 0 auto;
+                }
             }
 
             .active {
@@ -67,18 +133,50 @@
                 width: 50px;
                 height: 50px;
                 object-fit: contain;
+
+                @media (max-width: 480px) {
+                    width: 50px;
+                    height: 50px;
+                }
             }
         }
     }
-
+    
     .card {
         padding-block: 20px;
         width: 16rem;
         height: fit-content;
+        width: fit-content;
+        margin-inline: auto;
+
+        @media (max-width: 768px) {
+            position: static;
+            display: block;
+
+            top: initial;
+            left: initial;
+            transform: initial;
+
+            width: 50%;
+            max-width: 50%;
+            margin-block: 10%;
+
+        }
+
+        @media (max-width: 480px) {
+            width: 80%;
+            max-width: 80%;
+            margin-block: 10%;
+
+        }
 
         .form-control {
             width: 50%;
             text-align-last: center;
+
+            @media (max-width: 768px) {
+                width: 100%;
+            }
         }
 
         .card-btns {
@@ -86,18 +184,39 @@
             padding-block: 10px;
 
             .dropdown-menu {
-                overflow-y: scroll;
+                overflow-y: auto;
                 max-height: 200px;
             }
 
             .card-buy-btns {
-                margin-block: 30px;
+                margin-block: 20px;
 
                 button {
                     margin-block: 6px;
                     min-width: 50%;
+
+                    @media (max-width: 768px) {
+                        width: 100%;
+                    }
                 }
             }
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
