Support tickets design bug fix
Had a bug that closed and opened ticket names
would show differently just changed the <p> tag
for <label> and changed the width of the label
to 100%

--- a/reactjs/src/css/supporttickets.scss
+++ b/reactjs/src/css/supporttickets.scss
@@ -33,6 +33,7 @@ $content-height: adminpanel.$height-after-navbar;
             .ticket-name {
                 color: white;
                 margin: auto 0 auto auto;
+                width: 100%;
             }
 
             .close-ticket {
